<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">
                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@color/design_default_color_primary"/>
                <ToggleButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_favorite_selector"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:textOn=""
                    android:textOff=""
                    />
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:id="@+id/ll_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_star"
                android:drawablePadding="6dp"
                tools:text="10"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/title"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/release_date"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/text_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_movie"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginVertical="5dp"
                android:background="@color/design_default_color_primary"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>